infrastructure/instances/pgadmin/wait-for-db-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: placeholder
spec:
  template:
    spec:
