infrastructure/instances/pgadmin/pgadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: tazlab-db
  annotations:
    secret.reloader.stakater.com/reload: "tazlab-db-pguser-pgadmin"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
        app.kubernetes.io/name: pgadmin
    spec:
      serviceAccountName: pgadmin-sa
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:9.12
          securityContext:
            runAsUser: 0
            runAsGroup: 0
          ports:
            - containerPort: 80
              name: http
          startupProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 30
            periodSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: pgadmin-storage
              mountPath: /var/lib/pgadmin
      volumes:
        - name: pgadmin-storage
          persistentVolumeClaim:
            claimName: pgadmin-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: tazlab-db
spec:
  type: ClusterIP
  selector:
    app: pgadmin
  ports:
    - port: 8001
      targetPort: 80
