infrastructure/instances/pgadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  namespace: tazlab-db
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: auth-oauth2-proxy@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pgadmin.tazlab.net
      secretName: wildcard-tls
  rules:
    - host: pgadmin.tazlab.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 8001
